# smart-gate

./: .gitignore  CMakeLists.txt  README.md  openocd_nrf52.cfg
CMake/: nRF5_SDK_17.0.2_d674dde.cmake
SDK_NRF/nRF5_SDK_17.0.2_d674dde/modules/nrfx/templates/nRF52840/: nrfx_config.h
SDK_NRF/nrf5_SDK_for_Mesh_v5.0.0_src/: CMakeLists.txt
SDK_NRF/nrf5_SDK_for_Mesh_v5.0.0_src/examples/beaconing/: beaconing_nrf52832_xxAA_s132_7_2_0.emProject  beaconing_nrf52833_xxAA_s113_7_2_0.emProject  beaconing_nrf52840_xxAA_s140_7_2_0.emProject
SDK_NRF/nrf5_SDK_for_Mesh_v5.0.0_src/examples/dfu/: dfu_no_serial_nrf52832_xxAA_s132_7_2_0.emProject  dfu_no_serial_nrf52833_xxAA_s113_7_2_0.emProject  dfu_no_serial_nrf52840_xxAA_s140_7_2_0.emProject  dfu_nrf52832_xxAA_s132_7_2_0.emProject  dfu_nrf52833_xxAA_s113_7_2_0.emProject  dfu_nrf52840_xxAA_s140_7_2_0.emProject
SDK_NRF/nrf5_SDK_for_Mesh_v5.0.0_src/examples/dimming/dimming_client/: dimming_client_nrf52832_xxAA_s132_7_2_0.emProject  dimming_client_nrf52833_xxAA_s113_7_2_0.emProject  dimming_client_nrf52840_xxAA_s140_7_2_0.emProject
SDK_NRF/nrf5_SDK_for_Mesh_v5.0.0_src/examples/dimming/dimming_server/: dimming_server_nrf52832_xxAA_s132_7_2_0.emProject  dimming_server_nrf52833_xxAA_s113_7_2_0.emProject  dimming_server_nrf52840_xxAA_s140_7_2_0.emProject
SDK_NRF/nrf5_SDK_for_Mesh_v5.0.0_src/examples/enocean_switch/: enocean_switch_nrf52832_xxAA_s132_7_2_0.emProject  enocean_switch_nrf52833_xxAA_s113_7_2_0.emProject  enocean_switch_nrf52840_xxAA_s140_7_2_0.emProject
SDK_NRF/nrf5_SDK_for_Mesh_v5.0.0_src/examples/light_ctl/ctl_client/: CMakeLists.txt  light_ctl_client_nrf52832_xxAA_s132_7_2_0.emProject  light_ctl_client_nrf52833_xxAA_s113_7_2_0.emProject  light_ctl_client_nrf52840_xxAA_s140_7_2_0.emProject
SDK_NRF/nrf5_SDK_for_Mesh_v5.0.0_src/examples/light_ctl/ctl_client/include/: sdk_config.h
SDK_NRF/nrf5_SDK_for_Mesh_v5.0.0_src/examples/light_ctl/ctl_lc_server/: light_ctl_lc_server_nrf52832_xxAA_s132_7_2_0.emProject  light_ctl_lc_server_nrf52833_xxAA_s113_7_2_0.emProject  light_ctl_lc_server_nrf52840_xxAA_s140_7_2_0.emProject
SDK_NRF/nrf5_SDK_for_Mesh_v5.0.0_src/examples/light_ctl/ctl_server/: light_ctl_server_nrf52832_xxAA_s132_7_2_0.emProject  light_ctl_server_nrf52833_xxAA_s113_7_2_0.emProject  light_ctl_server_nrf52840_xxAA_s140_7_2_0.emProject
SDK_NRF/nrf5_SDK_for_Mesh_v5.0.0_src/examples/light_lc/server/: light_lc_server_nrf52832_xxAA_s132_7_2_0.emProject  light_lc_server_nrf52833_xxAA_s113_7_2_0.emProject  light_lc_server_nrf52840_xxAA_s140_7_2_0.emProject
SDK_NRF/nrf5_SDK_for_Mesh_v5.0.0_src/examples/light_lightness/client/: light_lightness_client_nrf52832_xxAA_s132_7_2_0.emProject  light_lightness_client_nrf52833_xxAA_s113_7_2_0.emProject  light_lightness_client_nrf52840_xxAA_s140_7_2_0.emProject
SDK_NRF/nrf5_SDK_for_Mesh_v5.0.0_src/examples/light_lightness/server/: light_lightness_server_nrf52832_xxAA_s132_7_2_0.emProject  light_lightness_server_nrf52833_xxAA_s113_7_2_0.emProject  light_lightness_server_nrf52840_xxAA_s140_7_2_0.emProject
SDK_NRF/nrf5_SDK_for_Mesh_v5.0.0_src/examples/light_switch/client/: light_switch_client_nrf52832_xxAA_s132_7_2_0.emProject  light_switch_client_nrf52833_xxAA_s113_7_2_0.emProject  light_switch_client_nrf52840_xxAA_s140_7_2_0.emProject
SDK_NRF/nrf5_SDK_for_Mesh_v5.0.0_src/examples/light_switch/server/: light_switch_server_nrf52832_xxAA_s132_7_2_0.emProject  light_switch_server_nrf52833_xxAA_s113_7_2_0.emProject  light_switch_server_nrf52840_xxAA_s140_7_2_0.emProject
SDK_NRF/nrf5_SDK_for_Mesh_v5.0.0_src/examples/lpn/: lpn_nrf52832_xxAA_s132_7_2_0.emProject  lpn_nrf52833_xxAA_s113_7_2_0.emProject  lpn_nrf52840_xxAA_s140_7_2_0.emProject
SDK_NRF/nrf5_SDK_for_Mesh_v5.0.0_src/examples/pb_remote/client/: pb_remote_client_nrf52832_xxAA_s132_7_2_0.emProject  pb_remote_client_nrf52833_xxAA_s113_7_2_0.emProject  pb_remote_client_nrf52840_xxAA_s140_7_2_0.emProject
SDK_NRF/nrf5_SDK_for_Mesh_v5.0.0_src/examples/pb_remote/server/: pb_remote_server_nrf52832_xxAA_s132_7_2_0.emProject  pb_remote_server_nrf52833_xxAA_s113_7_2_0.emProject  pb_remote_server_nrf52840_xxAA_s140_7_2_0.emProject
SDK_NRF/nrf5_SDK_for_Mesh_v5.0.0_src/examples/provisioner/: provisioner_nrf52832_xxAA_s132_7_2_0.emProject  provisioner_nrf52833_xxAA_s113_7_2_0.emProject  provisioner_nrf52840_xxAA_s140_7_2_0.emProject
SDK_NRF/nrf5_SDK_for_Mesh_v5.0.0_src/examples/scene/client/: scene_client_nrf52832_xxAA_s132_7_2_0.emProject  scene_client_nrf52833_xxAA_s113_7_2_0.emProject  scene_client_nrf52840_xxAA_s140_7_2_0.emProject
SDK_NRF/nrf5_SDK_for_Mesh_v5.0.0_src/examples/sensor/client/: sensor_client_nrf52832_xxAA_s132_7_2_0.emProject  sensor_client_nrf52833_xxAA_s113_7_2_0.emProject  sensor_client_nrf52840_xxAA_s140_7_2_0.emProject
SDK_NRF/nrf5_SDK_for_Mesh_v5.0.0_src/examples/sensor/server/: sensor_server_nrf52832_xxAA_s132_7_2_0.emProject  sensor_server_nrf52833_xxAA_s113_7_2_0.emProject  sensor_server_nrf52840_xxAA_s140_7_2_0.emProject
SDK_NRF/nrf5_SDK_for_Mesh_v5.0.0_src/examples/serial/: CMakeLists.txt  serial_nrf52832_xxAA_s132_7_2_0.emProject  serial_nrf52833_xxAA_s113_7_2_0.emProject  serial_nrf52840_xxAA_s140_7_2_0.emProject
SDK_NRF/nrf5_SDK_for_Mesh_v5.0.0_src/examples/serial/include/: sdk_config.h
SDK_NRF/nrf5_SDK_for_Mesh_v5.0.0_src/examples/serial/src/: main.c
SDK_NRF/nrf5_SDK_for_Mesh_v5.0.0_src/mesh/core/api/: nrf_mesh_config_core.h
nrf52840/: CMakeLists.txt  main.c
nrf52840/common/: CMakeLists.txt
nrf52840/config/: app_config.h  sdk_config.h
nrf52840/logger/: logger.c  logger.h  tinyprintf.c  tinyprintf.h  usb-serial.c  usb-serial.h
nrf52840/neopixel/: spi.c  spi.h  ws2812.c  ws2812.h
